EXTENSION: Fixed layout errors and design issues Implemented search bar + search icon Implemented dropdown menu for selecting currency to be converted Added background design elements to component Improved accessibility on mobile

--- a/src/components/currencyList/currencyList.css
+++ b/src/components/currencyList/currencyList.css
@@ -3,20 +3,37 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
-    width: 100%;
-    height: 100%;
     flex: 1;
     overflow-y: scroll;
+    overflow-x: hidden;
     gap: 5px;
+    scrollbar-width: 8px;
+    scrollbar-base-color: transparent;
+    scrollbar-track-color: var(--primary);
 }
 
-/*TODO: Add border and*/
+*::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--highlight); /* Color of the scrollbar thumb */
+    border-radius: 4px; /* Rounded corners of the scrollbar thumb */
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.5); /* Color of the scrollbar thumb on hover */
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent; /* Remove background color for the scrollbar track */
+}
+
 .item {
     padding: 10px;
-    height: 60px;
-    width: 100%;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: var(--background);
+    border: 1px solid var(--highlight);
     display: flex;
     flex-direction: row;
     justify-content: center;
